fix issue overlapping menu with paragraph

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -27,7 +27,7 @@
 
 @media (min-width: 651px){
 .codex-editor--narrow .codex-editor__redactor {
-    margin-left: 50px;
+    margin-left: 80px;
 	margin-right: 0%;
 }
 }
